<resources>
    <string name="app_name">Casa da Música</string>
    <string name="title_home">Shows</string>
    <string name="title_shows">Tickets</string>
    <string name="title_cafetaria">Cafetaria</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_transactions">Transactions</string>

    <!-- Register fragment begins -->
    <string name="register_title">Sign Up</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_email_placeholder">something@email.com</string>
    <string name="register_nif">NIF</string>
    <string name="register_nif_placeholder">123456789</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_credit_card">Credit Card Info</string>
    <string name="register_credit_card_type">Type</string>

    <string-array name="credit_cards_types">
        <item>VISA</item>
        <item>MASTERCARD</item>
        <item>AMERICAN EXPRESS</item>
        <item>DINERSCLUB</item>
        <item>DISCOVER</item>
        <item>JCB</item>
    </string-array>

    <string name="register_credit_card_number">Number</string>
    <string name="register_credit_card_number_placeholder">1111 1111 1111 1111</string>
    <string name="register_credit_card_expiring_month">Expiring Month</string>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="register_credit_card_expiring_month_placeholder">MM</string>
    <string name="register_credit_card_expiring_year">Expiring Year</string>
    <string name="register_credit_card_expiring_year_placeholder">yyyy</string>
    <string name="register_credit_card_cvv">CVV</string>
    <string name="register_credit_card_cvv_placeholder">123</string>
    <string name="register_create_account_button">Create Account</string>
    <!-- Register fragment ends -->

    <!-- Login fragment begins -->
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error">Username or password invalid!</string>
    <!-- Login fragment ends -->

    <!-- Shows fragment begins -->
    <string name="shows_next_shows">Next Shows</string>
    <string name="shows_my_shows">My Tickets</string>
    <!-- Shows fragment ends -->

    <!-- MyShows activity begins -->
    <string name="my_shows_action_bar_title">My Tickets</string>
    <string name="my_shows_bar_text">|</string>
    <!-- MyShows activity ends -->

    <!-- NextShows activity begins -->
    <string name="next_shows_action_bar_title">Next Shows</string>
    <!-- NextShows activity ends -->

    <!-- Options menu begins -->
    <string name="options_menu_sign_out_title">Sign Out</string>
    <string name="title_activity_show">ShowActivity</string>
    <!-- Options menu ends -->

    <!-- Activity activity begins -->
    <string name="shows">Show: </string>
    <string name="shows_artists">Artist: </string>
    <string name="shows_number_of_tickets">Number of Tickets</string>
    <string name="shows_add_to_cart">Add to Cart</string>
    <string name="shows_added_to_cart">Added to Cart</string>
    <!-- Activity activity ends -->

    <!-- Checkout Shows activity begins -->
    <string name="checkout_shows_title">Checkout Shows</string>
    <string name="checkout_shows_quantity_hint">Number of Tickets</string>
    <string name="checkout_shows_success_buy">Tickets bought!</string>
    <string name="checkout_shows_error_buy">Error buying tickets!!</string>
    <!-- Checkout Shows activity ends -->

    <!-- Ticket activity begins -->
    <string name="ticket_activity_title">Ticket</string>
    <string name="ticket_activity_number_of_tickets">Number of Tickets:</string>
    <!-- Ticket activity ends -->

    <!-- Cafetaria fragment begins -->
    <string name="cafetaria_fragment_title">Make Your Order</string>
    <string name="cafetaria_fragment_quantity_of_popcorn">Quantity of popcorn:</string>
    <string name="cafetaria_fragment_quantity_of_sandwich">Quantity of sandwich:</string>
    <string name="cafetaria_fragment_quantity_of_coffee">Quantity of coffee:</string>
    <string name="cafetaria_fragment_quantity_of_soda">Quantity of soda:</string>
    <string name="cafetaria_fragment_voucher_1">Voucher 1:</string>
    <string name="cafetaria_fragment_voucher_2">Voucher 2:</string>
    <string name="cafetaria_fragment_submit_button">Submit Order</string>
    <string-array name="cafetaria_vouchers_type">
        <item>NONE</item>
        <item>FOOD</item>
        <item>DRINK</item>
        <item>FIVEPERCENT</item>
    </string-array>
    <string name="cafetaria_order_error">You dont have enough vouchers</string>
    <string name="cafetaria_fivepercent_order_error">You cant use two fivepercent vouchers</string>
    <string name="cafetaria_successs_order">Order Bought!</string>
    <string name="cafetaria_error_order">Error on buying order!</string>
    <!-- Cafetaria fragment ends -->

    <!-- Transactions fragment begins -->
    <string name="transactions_fragment_type">Transaction Type </string>
    <string name="transactions_fragment_amount">Amount </string>
    <!-- Transactions fragment ends -->
</resources>
