<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_next_week_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shows"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/title_shows" />

    <item
        android:id="@+id/navigation_cafetaria"
        android:icon="@drawable/ic_free_breakfast_black_24dp"
        android:title="@string/title_cafetaria" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_transactions"/>

</menu>
