<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/login_title_vertical_margin"
        android:layout_marginBottom="@dimen/login_title_vertical_margin"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>
            <TextView
                android:id="@+id/login_username_placeholder"
                android:text="@string/login_username"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/login_text_view_left_margin"/>

            <EditText
                android:id="@+id/login_username_input"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/login_password_placeholder"
                android:text="@string/login_password"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/login_text_view_left_margin"/>

            <EditText
                android:id="@+id/login_password_input"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/login_button_horizontal_margin"
            android:layout_marginRight="@dimen/login_button_horizontal_margin"
            android:layout_marginTop="@dimen/login_button_vertical_margin"/>

        <TableRow>

            <TextView
                android:id="@+id/login_error"
                android:text="@string/login_error"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/login_button_horizontal_margin"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:visibility="invisible"/>

        </TableRow>
    </TableLayout>

</LinearLayout>