<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/shows_activity_padding"
    tools:context=".ShowActivity">

    <TextView
        android:id="@+id/show_name_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shows"
        app:layout_constraintRight_toLeftOf="@id/show_name_text_view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/show_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="Show 1"
        android:textSize="@dimen/shows_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/show_name_holder"
        app:layout_constraintLeft_toRightOf="@id/show_name_holder"
        app:layout_constraintTop_toTopOf="@+id/show_name_holder" />

    <TextView
        android:id="@+id/show_artist_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/shows_artists"
        app:layout_constraintRight_toLeftOf="@id/show_name_text_view"
        app:layout_constraintTop_toBottomOf="@id/show_name_text_view" />

    <TextView
        android:id="@+id/show_artist_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="Maluma"
        android:textSize="@dimen/shows_artist_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/show_artist_holder"
        app:layout_constraintLeft_toRightOf="@id/show_artist_holder"
        app:layout_constraintTop_toTopOf="@+id/show_artist_holder" />

    <TextView
        android:id="@+id/show_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shows_artist_bottom_margin"
        android:text="10/04/2018 09:00"
        android:textSize="@dimen/shows_date_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintRight_toLeftOf="@id/show_price_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_artist_text_view" />

    <TextView
        android:id="@+id/show_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shows_artist_bottom_margin"
        android:text="10€"
        android:textSize="@dimen/shows_price_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toRightOf="@id/show_date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_artist_text_view" />

    <EditText
        android:id="@+id/shows_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:hint="@string/shows_number_of_tickets"
        android:inputType="number"
        android:textSize="@dimen/shows_10_text_size"
        app:layout_constraintTop_toBottomOf="@id/show_price_text_view"
        tools:layout_editor_absoluteX="10dp"
        tools:ignore="MissingConstraints" />

    <android.support.design.button.MaterialButton
        android:id="@+id/shows_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shows_add_to_cart"
        android:textSize="@dimen/shows_10_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/shows_quantity"
        app:layout_constraintLeft_toRightOf="@id/shows_quantity"
        app:layout_constraintTop_toTopOf="@+id/shows_quantity" />


</android.support.constraint.ConstraintLayout>